--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     channel: "PME",
                     cnpj: "33039223000111",
                     contracts: "['123456', '234567', '345678', '456789', '567890']",
-                    profile: "['Operação', 'Recebimento', 'Decisão']",
+                    profile: "['Operação', 'Recebimento']",
                     cpf: "10159582600",
                 })
                .withAccount({
